--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "postinstall": "./node_modules/.bin/napa",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +20,11 @@
   "dependencies": {
     "d3": "^3.5.5",
     "jquery": "^2.1.3",
-    "moment": "^2.10.2"
+    "moment": "^2.10.2",
+    "napa": "latest"
+  },
+  "napa": {
+    "fitvids": "davatron5000/FitVids.js"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
